--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@types/ws": "^8.18.1",
         "axios": "^1.11.0",
+        "dotenv": "^17.2.3",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.2",
         "ws": "^8.18.3"
